兼容SQL Server数据库，支持端游充值

--- a/充值网关/App.config
+++ b/充值网关/App.config
@@ -2,7 +2,9 @@
 <configuration>
   <appSettings>
     <!--网关端口-->
-    <add key="port" value="7777"/>  
+    <add key="port" value="7777"/>
+    <!--数据库类型-->
+    <add key="DbType" value="mysql"/>
     <!--数据库IP-->
     <add key="DbHost" value="127.0.0.1"/>
     <!--数据库端口-->
