--- a/充值网关/充值网关.csproj
+++ b/充值网关/充值网关.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbObject.cs" />
     <Compile Include="utils\AppSettings.cs" />
     <Compile Include="utils\Des.cs" />
     <Compile Include="Form1.cs">
@@ -68,9 +69,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="utils\MysqlBase.cs" />
+    <Compile Include="utils\MysqlHelper.cs" />
     <Compile Include="utils\Session.cs" />
     <Compile Include="utils\SocketHelper.cs" />
+    <Compile Include="utils\SqlDbHelper.cs" />
     <Compile Include="utils\Tool.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
