1、增加多种游戏充值sql语句模板； 2、支持远程数据库；

--- a/充值网关/App.config
+++ b/充值网关/App.config
@@ -1,6 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
+    <!--当前版本号-->
+    <add key="version" value="1.3"/>
+    <!--远程更新地址-->
+    <add key="updateUrl" value="http://www.18pay.net/gateway/"/>
     <!--网关端口-->
     <add key="port" value="7777"/>
     <!--数据库类型-->
@@ -12,13 +16,21 @@
     <!--数据库用户-->
     <add key="DbUser" value="root"/>
     <!--数据库密码-->
-    <add key="DbPassword" value="root"/>
+    <add key="DbPassword" value="123456"/>
     <!--商户编号-->
     <add key="appid" value=""/>
     <!--商户密钥-->
     <add key="appkey" value=""/>
     <!--算法密钥-->
     <add key="key" value=""/>
+    <!--游戏币表名-->
+    <add key="table" value=""/>
+    <!--账号字段名-->
+    <add key="columnAccount" value=""/>
+    <!--游戏币字段名-->
+    <add key="columnGold" value=""/>
+    <!--是否使用自定义充值语句-->
+    <add key="customSQL" value="false"/>
     <!--充值SQL语句-->
     <add key="sql" value=""/>
   </appSettings>
